<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="activity_sample_device_admin">Locker Administrator</string>
    <string name="add_admin_extra_app_text">Locker needs to monitor screen-unlock attempts and the ability to erase all data in order to wipe the device after a given number of failed unlock attempts.</string>
    <string name="admin_checkbox">Admin Enabled</string>
    <string name="admin_receiver_status_disable_warning">Locker will no longer be able to protect your device</string>
    <string name="admin_receiver_status_disabled">Locker is no longer a device administrator</string>
    <string name="admin_receiver_status_enabled">Locker is now a device administrator</string>
    <string name="admin_summary">Locker needs Administrator access in order to control the lock screen protection.</string>
    <string name="app_name">Locker</string>
    <string name="attempts">Allowed Unlock Attempts</string>
    <string name="device_admin">Locker</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="hide_lockscreen_warning">Disable Lock Screen Warning</string>
    <string name="hide_lockscreen_warning_error">Lock screen warning bypass and safe mode is not supported on this device.</string>
    <string name="lock_dialog_reboot_only_summary">Your device will reboot after the specified number of failed unlock attempts. You can disable this protection at any time.</string>
    <string name="lock_dialog_summary">Your device will be wiped after the specified number of failed unlock attempts. You can disable this protection at any time.</string>
    <string name="lock_dialog_title">Enable lock screen protection?</string>
    <string name="lock_disable_dialog_summary">Your lock screen will no longer be protected and an unlimited number of attempts to unlock your device will be possible.</string>
    <string name="lock_disable_dialog_title">Disable lock screen protection?</string>
    <string name="no">No</string>
    <string name="not_protected">Not protected</string>
    <string name="not_protected_summary">Your lock screen is currently unprotected.</string>
    <string name="notification_safe_mode_wipe">Wipe condition triggered</string>
    <string name="notification_safe_mode_wipe_summary">The maximum number of allowed unlock attempts was exceeded</string>
    <string name="protect">Protected</string>
    <string name="protected_safe_mode">Protected (Safe Mode)</string>
    <string name="protected_safe_mode_summary">Safe Mode is enabled. No wipe will be performed</string>
    <string name="protected_summary_one">Device will be erased after</string>
    <string name="protected_summary_two">failed unlock attempts.</string>
    <string name="reboot_only">Device reboot only</string>
    <string name="safe_mode">Safe Mode</string>
    <string name="safe_mode_checkbox_title">Enable Safe Mode</string>
    <string name="safe_mode_summary">No wipe will be performed when safe mode is enabled. A notification will be shown instead.</string>
    <string name="yes">Yes</string>
    <string name="device_admin_summary">Allow Locker to erase the device after numerous failed unlock attempts</string>
</resources>
