<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorBackground" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/top_layout" android:background="@color/colorRed" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15sp" android:textColor="@color/colorWhite" android:id="@+id/textViewTopTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10dp" android:text="@string/not_protected"/>
        <TextView android:textSize="13sp" android:textColor="@color/colorVeryLightGray" android:id="@+id/textViewTopTitleSummary" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/not_protected_summary" android:layout_below="@+id/textViewTopTitle" android:layout_alignLeft="@+id/textViewTopTitle"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/top_layout">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/admin_layout" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp">
                <TextView android:textSize="13sp" android:textColor="@color/colorGray" android:id="@+id/textViewAdmin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/admin_summary"/>
                <CheckBox android:textSize="14sp" android:textColor="@color/colorLightBlack" android:id="@+id/checkBoxAdmin" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10dp" android:text="@string/admin_checkbox" android:layout_below="@+id/textViewAdmin" android:onClick="onCheckboxClicked"/>
            </RelativeLayout>
            <SeekBar android:id="@+id/seekBarLocker" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="15dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:max="20" android:layout_below="@+id/admin_layout"/>
            <TextView android:textSize="15sp" android:textColor="@color/colorLightGray" android:id="@+id/textViewLockerCountLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/attempts" android:layout_below="@+id/seekBarLocker" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="25sp" android:textColor="@color/colorGray" android:id="@+id/textViewLockerCount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="3" android:layout_below="@+id/textViewLockerCountLabel" android:layout_centerHorizontal="true"/>
            <Button android:id="@+id/buttonApply" android:background="@color/colorBlue" android:paddingLeft="50dp" android:paddingRight="50dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/enable" android:layout_below="@+id/textViewLockerCount" android:layout_centerHorizontal="true" android:onClick="enableProtection" style="@style/Widget.Holo.Button.Borderless"/>
            <CheckBox android:enabled="false" android:textSize="14sp" android:textColor="@color/colorGray" android:id="@+id/checkBoxHideWarning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/hide_lockscreen_warning" android:layout_below="@+id/buttonApply" android:layout_centerHorizontal="true"/>
            <RelativeLayout android:id="@+id/safety_layout" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:layout_below="@+id/checkBoxHideWarning">
                <TextView android:textSize="15sp" android:textColor="@color/colorLightBlack" android:id="@+id/textViewSafetyTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/safe_mode"/>
                <TextView android:textSize="13sp" android:textColor="@color/colorGray" android:id="@+id/textViewSafetySummary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/safe_mode_summary" android:layout_below="@+id/textViewSafetyTitle"/>
                <CheckBox android:textSize="14sp" android:textColor="@color/colorLightBlack" android:id="@+id/checkBoxSafeMode" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10dp" android:text="@string/safe_mode_checkbox_title" android:layout_below="@+id/textViewSafetySummary" android:onClick="onSafeModeCheckboxChecked"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
